[gd_scene load_steps=26 format=2]

[ext_resource path="res://Resources/barrel_pirate_drink.png" type="Texture" id=1]
[ext_resource path="res://Resources/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/spr_bottle_fill_strip.png" type="Texture" id=3]
[ext_resource path="res://Resources/barrel_pirate.png" type="Texture" id=4]
[ext_resource path="res://Resources/spr_bottle_empty_strip.png" type="Texture" id=5]
[ext_resource path="res://Resources/Dash.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/Enemy_Die.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/Drink.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 20 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 20 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "drink_walk",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 5 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
radius = 20.1471
height = 41.4699

[sub_resource type="CapsuleShape2D" id=11]
radius = 19.3974
height = 9.80881

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 18 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.420441, -5.88629 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 4, 4 )
frames = SubResource( 6 )
animation = "walk"
playing = true

[node name="Bottle2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 22.1459, -59.046 )
rotation = -1.74533
scale = Vector2( 2, 2 )
frames = SubResource( 23 )
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0.420441, -37.6171 )
shape = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="DashBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -33.2788 )
shape = SubResource( 11 )

[node name="Bottle" type="AnimatedSprite" parent="."]
position = Vector2( -2.98428e-13, -80 )
rotation = 1.5708
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 10 )

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DrinkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="EnemyDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
